Adjust PoD plot to have 3 kgh bin width

--- a/10_paper_analysis.ipynb
+++ b/10_paper_analysis.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -421,7 +421,33 @@
       "(sigma from meter: 0.039648)\n",
       "(sigma from gas composition: 0.001362)\n",
       "(combined total sigma: 0.071400)\n",
-      "\n"
+      "\n",
+      "    overpass_id   overpass_datetime  zero_release  non_zero_release  \\\n",
+      "0           1.0 2022-10-10 17:00:39         False              True   \n",
+      "2           3.0 2022-10-10 17:28:37         False              True   \n",
+      "54         55.0 2022-10-12 19:18:47         False              True   \n",
+      "\n",
+      "    operator_kept  stanford_kept  phase_iii  pass_all_qc  altitude_feet  \\\n",
+      "0            True           True          1         True    10351.26648   \n",
+      "2           False           True          1        False    10419.39464   \n",
+      "54           True           True          1         True    10177.31131   \n",
+      "\n",
+      "    fail_all_qc  ...  upper_95CI  lower_95CI  sigma_flow_variability  \\\n",
+      "0         False  ...   11.062080   10.782193                0.061894   \n",
+      "2         False  ...    8.800302    8.477044                0.077008   \n",
+      "54        False  ...   11.651244   11.346774                0.067895   \n",
+      "\n",
+      "    sigma_meter_reading  sigma_gas_composition  operator_detected  \\\n",
+      "0              0.039720               0.001617               True   \n",
+      "2              0.039648               0.001617               True   \n",
+      "54             0.039735               0.001959               True   \n",
+      "\n",
+      "    operator_quantification  operator_lower  operator_upper     qc_summary  \n",
+      "0                 87.193762       42.486457      131.901066       pass_all  \n",
+      "2                       NaN             NaN             NaN  fail_operator  \n",
+      "54                 4.900885        2.252889        7.548881       pass_all  \n",
+      "\n",
+      "[3 rows x 22 columns]\n"
      ]
     }
    ],
@@ -431,9 +457,12 @@
     "\n",
     "operator = 'Carbon Mapper'\n",
     "overpasses = load_overpass_summary(operator, stage=1)\n",
-    "operator_detected = overpasses[overpasses['operator_detected']] # implies detected == True\n",
+    "cm_detection_mask = (overpasses['operator_detected'] == True) & (overpasses['stanford_kept'] == True)\n",
+    "operator_detected = overpasses.loc[cm_detection_mask] # implies detected == True\n",
     "smallest_detected = operator_detected.min()\n",
-    "print_overpass_info(smallest_detected)"
+    "print_overpass_info(smallest_detected)\n",
+    "\n",
+    "print(operator_detected[operator_detected['release_rate_kgh'] < 12])"
    ],
    "metadata": {
     "collapsed": false
