Calculate Kairos Stage 2 and 3 error and return dataframes for inspection

--- a/10_paper_analysis.ipynb
+++ b/10_paper_analysis.ipynb
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "outputs": [
     {
      "name": "stdout",
@@ -1530,7 +1530,47 @@
       "Number of points within 25% of metered release rate: 72\n",
       "Percentage of measurements within 25% of metered rate: 58.1%\n",
       "Number of points within 50% of metered release rate: 117\n",
-      "Percentage of measurements within 50% of metered rate: 94.4%\n"
+      "Percentage of measurements within 50% of metered rate: 94.4%\n",
+      "     release_rate_kgh  operator_quantification  release_rate_0.50x  \\\n",
+      "2           18.748945                 25.85856            9.374473   \n",
+      "3           18.719447                 20.04708            9.359723   \n",
+      "4           18.739307                 27.09712            9.369654   \n",
+      "5          113.413008                116.59392           56.706504   \n",
+      "6          113.245166                255.08768           56.622583   \n",
+      "..                ...                      ...                 ...   \n",
+      "336         49.240484                 68.33504           24.620242   \n",
+      "343          9.411912                 10.63328            4.705956   \n",
+      "345        382.078576                556.44120          191.039288   \n",
+      "346        381.475330                475.53056          190.737665   \n",
+      "348        113.677707                152.67984           56.838854   \n",
+      "\n",
+      "     release_rate_1.50x  release_rate_0.25x  release_rate_1.25x  within_25%  \\\n",
+      "2             28.123418           14.061709           23.436182       False   \n",
+      "3             28.079170           14.039585           23.399308        True   \n",
+      "4             28.108961           14.054480           23.424134       False   \n",
+      "5            170.119513           85.059756          141.766261        True   \n",
+      "6            169.867749           84.933874          141.556457       False   \n",
+      "..                  ...                 ...                 ...         ...   \n",
+      "336           73.860727           36.930363           61.550606       False   \n",
+      "343           14.117868            7.058934           11.764890        True   \n",
+      "345          573.117865          286.558932          477.598221       False   \n",
+      "346          572.212995          286.106497          476.844162        True   \n",
+      "348          170.516561           85.258281          142.097134       False   \n",
+      "\n",
+      "     within_50%  \n",
+      "2          True  \n",
+      "3          True  \n",
+      "4          True  \n",
+      "5          True  \n",
+      "6         False  \n",
+      "..          ...  \n",
+      "336        True  \n",
+      "343        True  \n",
+      "345        True  \n",
+      "346        True  \n",
+      "348        True  \n",
+      "\n",
+      "[124 rows x 8 columns]\n"
      ]
     }
    ],
@@ -1600,17 +1640,21 @@
     "    print(f'Number of points within 50% of metered release rate: {test_50_percent}')\n",
     "    percent_within_50_percent = test_50_percent / total_points * 100\n",
     "    print(f'Percentage of measurements within 50% of metered rate: {percent_within_50_percent:.1f}%')\n",
+    "    \n",
+    "    accuracy_summary = pd.concat([accuracy_df, test_accuracy], axis=1)\n",
+    "    return accuracy_summary\n",
     "\n",
     "\n",
-    "calc_kairos_error(1, False)\n",
-    "calc_kairos_error(2, False)\n",
-    "calc_kairos_error(3, False)\n"
+    "stage_1 = calc_kairos_error(1, False)\n",
+    "stage_2 = calc_kairos_error(2, False)\n",
+    "stage_3 = calc_kairos_error(3, False)\n",
+    "print(stage_1)\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T02:18:29.897304Z",
-     "start_time": "2024-03-05T02:18:29.877750Z"
+     "end_time": "2024-03-05T02:34:16.781413Z",
+     "start_time": "2024-03-05T02:34:16.753321Z"
     }
    }
   },
