Add annotations to histogram; begin working on the average windspeed code

--- a/01_meter_data_cleaning.ipynb
+++ b/01_meter_data_cleaning.ipynb
@@ -250,7 +250,7 @@
    "cell_type": "markdown",
    "source": [
     "### Load daily metered release rates\n",
-    "This is all the metered data for releases conducted on flight days for each airplane operator. Includes the metered flow rate, then assigns methane mole fraction based on the measurement datetime, and calculates the methane mole fraction using the Kinder Morgan methane mole fraction data."
+    "This is all the metered data for releases conducted on flight days for each airplane operator. Includes the metered flow rate, then assigns methane mole fraction based on the measurement datetime, and calculates the methane mole fraction using the measurement station methane mole fraction data."
    ],
    "metadata": {
     "collapsed": false
