--- a/10_paper_analysis.ipynb
+++ b/10_paper_analysis.ipynb
@@ -573,23 +573,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GHGSat: 192 flightlines reported to SU\n",
+      "GHGSat-AV: 192 flightlines reported to SU\n",
       "57 overpasses that fail SU QC\n",
       "135 overpasses that pass SU QC\n",
-      "134 overpasses quantified by GHGSat\n",
-      "1 overpasses removed by GHGSat\n",
+      "134 overpasses quantified by GHGSat-AV\n",
+      "1 overpasses removed by GHGSat-AV\n",
       "\n",
-      "2 overpasses documented by Stanford but not reported by GHGSat\n",
+      "2 overpasses documented by Stanford but not reported by GHGSat-AV\n",
       "\n",
-      "Total releases conducted by Stanford (including missing overpasses not reported by GHGSat: 194\n",
+      "Total releases conducted by Stanford (including missing overpasses not reported by GHGSat-AV: 194\n",
       "\n",
-      "Smallest non-zero volume overpass for GHGSat that passes SU qc:\n",
+      "Smallest non-zero volume overpass for GHGSat-AV that passes SU qc:\n",
       "Release Rate: 1.049607814791 kg CH4 / hr\n",
       "[1.0192273822188926, 1.0799882473631073, 95% CI]\n",
       "(sigma from gas flow: 0.014922)\n",
@@ -597,7 +597,7 @@
       "(sigma from gas composition: 0.002693)\n",
       "(combined total sigma: 0.015500)\n",
       "\n",
-      "Smallest non-zero volume overpass for GHGSat that passes operator and SU qc:\n",
+      "Smallest non-zero volume overpass for GHGSat-AV that passes operator and SU qc:\n",
       "Release Rate: 1.049607814791 kg CH4 / hr\n",
       "[1.0192273822188926, 1.0799882473631073, 95% CI]\n",
       "(sigma from gas flow: 0.014922)\n",
@@ -605,7 +605,7 @@
       "(sigma from gas composition: 0.002693)\n",
       "(combined total sigma: 0.015500)\n",
       "\n",
-      "Largest volume overpass for GHGSat that passes SU qc:\n",
+      "Largest volume overpass for GHGSat-AV that passes SU qc:\n",
       "Release Rate: 1144.809472515 kg CH4 / hr\n",
       "[1112.419998540914, 1177.1989464890858, 95% CI]\n",
       "(sigma from gas flow: 16.629319)\n",
@@ -613,7 +613,7 @@
       "(sigma from gas composition: 0.003645)\n",
       "(combined total sigma: 16.525242)\n",
       "\n",
-      "Largest volume overpass for GHGSat that passes operator & SU qc:\n",
+      "Largest volume overpass for GHGSat-AV that passes operator & SU qc:\n",
       "Release Rate: 1144.809472515 kg CH4 / hr\n",
       "[1112.419998540914, 1177.1989464890858, 95% CI]\n",
       "(sigma from gas flow: 16.629319)\n",
@@ -621,13 +621,13 @@
       "(sigma from gas composition: 0.003645)\n",
       "(combined total sigma: 16.525242)\n",
       "\n",
-      "Number of zero releases to GHGSat: 4\n",
+      "Number of zero releases to GHGSat-AV: 4\n",
       "\n",
       "No false positives detected, all zero releases were correctly categorized\n",
       "\n",
       "False negatives detected: 8\n",
       "\n",
-      "Largest false negative for GHGSat: \n",
+      "Largest false negative for GHGSat-AV: \n",
       "Release Rate: 29.17336281606 kg CH4 / hr\n",
       "[28.992668141880767, 29.35405749023923, 95% CI]\n",
       "(sigma from gas flow: 0.017611)\n",
@@ -635,7 +635,7 @@
       "(sigma from gas composition: 0.002693)\n",
       "(combined total sigma: 0.092191)\n",
       "\n",
-      "Smallest detected plume by GHGSat (that passes ALL QC):\n",
+      "Smallest detected plume by GHGSat-AV (that passes ALL QC):\n",
       "Release Rate: 2.9122165317825 kg CH4 / hr\n",
       "[2.8616381976545116, 2.962794865910489, 95% CI]\n",
       "(sigma from gas flow: 0.023696)\n",
@@ -643,7 +643,7 @@
       "(sigma from gas composition: 0.003645)\n",
       "(combined total sigma: 0.025805)\n",
       "\n",
-      "Smallest quantified plume by GHGSat:\n",
+      "Smallest quantified plume by GHGSat-AV:\n",
       "Release Rate: 2.9122165317825 kg CH4 / hr\n",
       "[2.8616381976545116, 2.962794865910489, 95% CI]\n",
       "(sigma from gas flow: 0.023696)\n",
@@ -656,15 +656,15 @@
    "source": [
     "from writing_analysis import operator_releases_summary_stats\n",
     "# GHGSat\n",
-    "operator = 'GHGSat'\n",
+    "operator = 'GHGSat-AV'\n",
     "operator_releases_summary_stats(operator)\n",
     "\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T02:04:42.540929Z",
-     "start_time": "2024-03-05T02:04:42.482365Z"
+     "end_time": "2024-03-08T00:08:51.461824Z",
+     "start_time": "2024-03-08T00:08:50.278280Z"
     }
    }
   },
