Calculate average daily wind speed (very hacky, needs to be cleaned up later)

--- a/14_peer_review.ipynb
+++ b/14_peer_review.ipynb
@@ -1075,8 +1075,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 55,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows that were NA in the average period (2022-11-10 18:00:00 to 2022-11-10 22:01:22): 69\n",
+      "{'average_windspeed': 1.5996315023593308, 'average_winddirection': 156.5785978964991, 'stdev_windspeed': 0.826806533805037, 'stdev_winddirection': 79.80512374140841}\n"
+     ]
+    }
+   ],
    "source": [
     "# Daily wind conditions summary \n",
     "\n",
@@ -1099,97 +1108,93 @@
     "cm_day5_end = datetime.datetime(2022, 10, 29, 21, 11, 34)\n",
     "cm_day6_end = datetime.datetime(2022, 10, 31, 21, 14, 22)\n",
     "\n",
-    "def load_flight_days(operator='all'):\n",
-    "    cm_flight_days = {\n",
-    "        \"date\": ['10_10', '10_11', '10_12', '10_28', '10_29', '10_31'],\n",
-    "        \"start_time\": [\n",
-    "            datetime.datetime(2022, 10, 10, 16, 59, 00),\n",
-    "            datetime.datetime(2022, 10, 11, 17, 14, 13),\n",
-    "            datetime.datetime(2022, 10, 12, 17, 13, 16),\n",
-    "            datetime.datetime(2022, 10, 28, 17, 49, 5),\n",
-    "            datetime.datetime(2022, 10, 29, 17, 11, 30),\n",
-    "            datetime.datetime(2022, 10, 31, 17, 14, 46),\n",
-    "        ],\n",
-    "        \"end_time\": [\n",
-    "            datetime.datetime(2022, 10, 10, 21, 30, 14),\n",
-    "            datetime.datetime(2022, 10, 11, 21, 16, 36),\n",
-    "            datetime.datetime(2022, 10, 12, 21, 15, 23),\n",
-    "            datetime.datetime(2022, 10, 28, 21, 7, 0),\n",
-    "            datetime.datetime(2022, 10, 29, 21, 11, 34),\n",
-    "            datetime.datetime(2022, 10, 31, 21, 14, 22),\n",
-    "        ],\n",
-    "    }\n",
+    "# Kairos \n",
     "\n",
-    "    # Kairos\n",
-    "    kairos_flight_days = {\n",
-    "        \"date\": ['10_24', '10_25', '10_26', '10_27', '10_28'],\n",
-    "        \"start_time\": [\n",
-    "            datetime.datetime(2022, 10, 24, 16, 44, 28),\n",
-    "            datetime.datetime(2022, 10, 25, 16, 34, 27),\n",
-    "            datetime.datetime(2022, 10, 26, 16, 36, 47),\n",
-    "            datetime.datetime(2022, 10, 27, 16, 35, 23),\n",
-    "            datetime.datetime(2022, 10, 28, 16, 39, 12),\n",
-    "        ],\n",
-    "        \"end_time\": [\n",
-    "            datetime.datetime(2022, 10, 24, 19, 48, 44),\n",
-    "            datetime.datetime(2022, 10, 25, 20, 33, 1),\n",
-    "            datetime.datetime(2022, 10, 26, 20, 40, 55),\n",
-    "            datetime.datetime(2022, 10, 27, 20, 14, 15),\n",
-    "            datetime.datetime(2022, 10, 28, 20, 39, 58),\n",
-    "        ],\n",
-    "    }\n",
+    "kairos_day1_start = datetime.datetime(2022, 10, 24, 16, 44, 28)\n",
+    "kairos_day2_start = datetime.datetime(2022, 10, 25, 16, 34, 27)\n",
+    "kairos_day3_start = datetime.datetime(2022, 10, 26, 16, 36, 47)\n",
+    "kairos_day4_start = datetime.datetime(2022, 10, 27, 16, 35, 23)\n",
+    "kairos_day5_start = datetime.datetime(2022, 10, 28, 16, 39, 12)\n",
     "\n",
-    "    # MAIR\n",
-    "    mair_flight_days = {\n",
-    "        \"date\": ['10_25', '10_29'],\n",
-    "        \"start_time\": [\n",
-    "            datetime.datetime(2022, 10, 25, 16, 55, 47),\n",
-    "            datetime.datetime(2022, 10, 29, 16, 23, 1),\n",
-    "        ],\n",
-    "        \"end_time\": [\n",
-    "            datetime.datetime(2022, 10, 25, 20, 46, 41),\n",
-    "            datetime.datetime(2022, 10, 29, 21, 2, 17),\n",
-    "        ],\n",
-    "    }\n",
+    "kairos_day1_end = datetime.datetime(2022, 10, 24, 19, 48, 44)\n",
+    "kairos_day2_end = datetime.datetime(2022, 10, 25, 20, 33, 1)\n",
+    "kairos_day3_end = datetime.datetime(2022, 10, 26, 20, 40, 55)\n",
+    "kairos_day4_end = datetime.datetime(2022, 10, 27, 20, 14, 15)\n",
+    "kairos_day5_end = datetime.datetime(2022, 10, 28, 20, 39, 58)\n",
     "\n",
-    "    # GHGSat\n",
-    "    ghg_flight_days = {\n",
-    "        \"date\": ['10_31', '11_02', '11_04', '11_07'],\n",
-    "        \"start_time\": [\n",
-    "            datetime.datetime(2022, 10, 31, 17, 1, 58),\n",
-    "            datetime.datetime(2022, 11, 2, 16, 36, 30),\n",
-    "            datetime.datetime(2022, 11, 4, 16, 41, 19),\n",
-    "            datetime.datetime(2022, 11, 7, 19, 21, 44),\n",
-    "        ],\n",
-    "        \"end_time\": [\n",
-    "            datetime.datetime(2022, 10, 31, 20, 59, 3),\n",
-    "            datetime.datetime(2022, 11, 2, 18, 5, 2),\n",
-    "            datetime.datetime(2022, 11, 4, 20, 31, 59),\n",
-    "            datetime.datetime(2022, 11, 7, 22, 9, 39),\n",
-    "        ],\n",
-    "    }\n",
     "\n",
-    "    sciav_flight_days = {\n",
-    "        \"date\": ['11_08', '11_10', '11_11'],\n",
-    "        \"start_time\": [\n",
-    "            datetime.datetime(2022, 11, 8, 21, 35, 0),\n",
-    "            datetime.datetime(2022, 11, 10, 18, 0, 0),\n",
-    "            datetime.datetime(2022, 11, 11, 19, 0, 0),\n",
-    "        ],\n",
-    "        \"end_time\": [\n",
-    "            datetime.datetime(2022, 11, 8, 23, 55, 3),\n",
-    "            datetime.datetime(2022, 11, 10, 22, 1, 22),\n",
-    "            datetime.datetime(2022, 11, 11, 23, 39, 33),\n",
-    "        ],\n",
-    "    }\n",
+    "#MAIR: \n",
+    "mair_day1_start = datetime.datetime(2022, 10, 25, 16, 55, 47)\n",
+    "mair_day2_start = datetime.datetime(2022, 10, 29, 16, 23, 1)\n",
     "\n",
-    "test_1 = datetime.datetime(2022, 10, 10, 18, 16, 10)\n",
-    "test_2 = datetime.datetime(2022, 10, 10, 18, 17, 10)\n",
+    "mair_day1_end = datetime.datetime(2022, 10, 25, 20, 46, 41)\n",
+    "mair_day2_end = datetime.datetime(2022, 10, 29, 21, 2, 17)\n",
     "\n",
-    "wind_test1 = summarize_wind_conditions(test_1, test_2)"
+    "# GHGSat-AV \n",
+    "\n",
+    "ghg_day1_start = datetime.datetime(2022, 10, 31, 17, 1, 58)\n",
+    "ghg_day2_start = datetime.datetime(2022, 11, 2, 16, 36, 30)\n",
+    "ghg_day3_start = datetime.datetime(2022, 11, 4, 16, 41, 19)\n",
+    "ghg_day4_start = datetime.datetime(2022, 11, 7, 19, 21, 44)\n",
+    "\n",
+    "ghg_day1_end = datetime.datetime(2022, 10, 31, 20, 59, 3)\n",
+    "ghg_day2_end = datetime.datetime(2022, 11, 2, 18, 5, 2)\n",
+    "ghg_day3_end = datetime.datetime(2022, 11, 4, 20, 31, 59)\n",
+    "ghg_day4_end = datetime.datetime(2022, 11, 7, 22, 9, 39)\n",
+    "\n",
+    "# SciAV \n",
+    "\n",
+    "sciav_day1_start = datetime.datetime(2022, 11, 8, 21, 35, 0)\n",
+    "sciav_day2_start = datetime.datetime(2022, 11, 10, 18, 0, 0)\n",
+    "sciav_day3_start = datetime.datetime(2022, 11, 11, 19, 0, 0)\n",
+    "\n",
+    "sciav_day1_end = datetime.datetime(2022, 11, 8, 23, 55, 3)\n",
+    "sciav_day2_end = datetime.datetime(2022, 11, 10, 22, 1, 22)\n",
+    "sciav_day3_end = datetime.datetime(2022, 11, 11, 23, 39, 33)\n",
+    "\n",
+    "\n",
+    "# wind_test1 = summarize_wind_conditions(test_1, test_2)\n",
+    "\n",
+    "# Carbon Mapper day 1 \n",
+    "wind_test1 = summarize_wind_conditions(cm_day1_start, cm_day1_end) # oct 10 \n",
+    "wind_test2 = summarize_wind_conditions(cm_day2_start, cm_day2_end) # oct 11 \n",
+    "wind_test3 = summarize_wind_conditions(cm_day3_start, cm_day3_end) # oct 12\n",
+    "wind_test4 = summarize_wind_conditions(kairos_day1_start, kairos_day1_end) # oct 24\n",
+    "\n",
+    "# oct 25 - mair day 1, kairos day 2\n",
+    "wind_test5 = summarize_wind_conditions(kairos_day2_start, mair_day1_end)\n",
+    "\n",
+    "# oct 26 - kairos day 3\n",
+    "wind_test6 = summarize_wind_conditions(kairos_day3_start, kairos_day3_end)\n",
+    "\n",
+    "# oct 27 - kairos day 4\n",
+    "wind_test7 = summarize_wind_conditions(kairos_day4_start, kairos_day4_end)\n",
+    "\n",
+    "# oct 28 - kairos day 5; CM day 4 \n",
+    "wind_test8 = summarize_wind_conditions(kairos_day5_start, cm_day4_end)\n",
+    "\n",
+    "# oct 29 - CM day 5, MethaneAIR day 2\n",
+    "wind_test8 = summarize_wind_conditions(mair_day2_start, cm_day5_end)\n",
+    "\n",
+    "# oct 31 - CM day 6, GHGSat day 1 \n",
+    "wind_test9 = summarize_wind_conditions(ghg_day1_start, cm_day6_end)\n",
+    "\n",
+    "# nov 2 - ghgsat day 2 --> 2D sonic anemometer \n",
+    "wind_test10 = summarize_wind_conditions(ghg_day2_start, ghg_day2_end)\n",
+    "\n",
+    "# nov 10 - sciav day 2 \n",
+    "\n",
+    "wind_test11 = summarize_wind_conditions(sciav_day2_start, sciav_day2_end)\n",
+    "wind_test12 = summarize_wind_conditions(sciav_day3_start, sciav_day3_end)\n",
+    "\n",
+    "print(wind_test6)\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-08T03:54:11.289986Z",
+     "start_time": "2024-03-08T03:54:11.011445Z"
+    }
    },
    "id": "2cd218cef9c948c0"
   }
