Calculate GHGSat Stage 3 uncertainty numbers and correct stage 3 handling in calc_parity_intersection

--- a/10_paper_analysis.ipynb
+++ b/10_paper_analysis.ipynb
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -1240,12 +1240,12 @@
      "text": [
       "Fraction of Carbon Mapper Stage 1 overpasses with 95% CI that encompasses parity line: 89%\n",
       "Fraction of Carbon Mapper Stage 2 overpasses with 95% CI that encompasses parity line: 76%\n",
-      "Fraction of Carbon Mapper Stage 3 overpasses with 95% CI that encompasses parity line: 80%\n",
+      "Fraction of Carbon Mapper Stage 3 overpasses with 95% CI that encompasses parity line: 71%\n",
       "\n",
       "\n",
       "Fraction of GHGSat Stage 1 overpasses with 95% CI that encompasses parity line: 93%\n",
       "Fraction of GHGSat Stage 2 overpasses with 95% CI that encompasses parity line: 84%\n",
-      "Fraction of GHGSat Stage 3 overpasses with 95% CI that encompasses parity line: 84%\n",
+      "Fraction of GHGSat Stage 3 overpasses with 95% CI that encompasses parity line: 81%\n",
       "\n",
       "\n",
       "Fraction of MethaneAIR Stage 1 overpasses with 95% CI that encompasses parity line: 83%\n",
@@ -1281,8 +1281,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T02:04:42.718008Z",
-     "start_time": "2024-03-05T02:04:42.690850Z"
+     "end_time": "2024-03-08T17:29:00.771952Z",
+     "start_time": "2024-03-08T17:29:00.734161Z"
     }
    }
   },
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -1372,8 +1372,10 @@
      "text": [
       "Fraction of GHGSat Stage 1 overpasses with 95% CI that encompasses parity line: 93%\n",
       "Fraction of GHGSat Stage 2 overpasses with 95% CI that encompasses parity line: 84%\n",
+      "Fraction of GHGSat Stage 3 overpasses with 95% CI that encompasses parity line: 81%\n",
       "Mean 95% CI error bar length for Stage 1: 113.16\n",
       "Mean 95% CI error bar length for Stage 2: 71.71\n",
+      "Mean 95% CI error bar length for Stage 3: 74.45\n",
       "Average ratio between Stage 2 and Stage 1: 0.6118\n",
       "Minimum CI ratio: 0.10\n",
       "Minimum CI ratio: 1.08\n",
@@ -1398,21 +1400,33 @@
     "ghg_2_df = calc_parity_intersection(operator, 2, strict_discard=False)\n",
     "ghg_2_df.to_csv(pathlib.PurePath('06_results', 'paper_analysis', 'ghg_2_df_parity_compare.csv'))\n",
     "\n",
+    "ghg_3_df = calc_parity_intersection(operator, 3, strict_discard=False)\n",
+    "ghg_3_df.to_csv(pathlib.PurePath('06_results', 'paper_analysis', 'ghg_3_df_parity_compare.csv'))\n",
+    "\n",
     "compare_ghg = pd.DataFrame()\n",
     "compare_ghg['stage1_95CI'] = ghg_1_df['operator_95CI_bounds'] # how big are stage 1 error bars?\n",
     "compare_ghg['stage2_95CI'] = ghg_2_df['operator_95CI_bounds'] # how big are stage 2 error bars?\n",
+    "compare_ghg['stage3_95CI'] = ghg_3_df['operator_95CI_bounds'] # how big are stage 2 error bars?\n",
+    "\n",
     "\n",
     "compare_ghg['CI_ratio'] = compare_ghg['stage2_95CI'] / compare_ghg['stage1_95CI']\n",
     "compare_ghg['stage1_cross_parity'] = ghg_1_df['intersect_parity_line'] # cross parity in stage 1?\n",
     "compare_ghg['stage2_cross_parity'] = ghg_2_df['intersect_parity_line'] # cross parity in stage 2?\n",
+    "compare_ghg['stage3_cross_parity'] = ghg_3_df['intersect_parity_line'] # cross parity in stage 2?\n",
     "\n",
     "stage1_95CI_mean = compare_ghg.stage1_95CI.mean()\n",
     "stage2_95CI_mean = compare_ghg.stage2_95CI.mean()\n",
+    "stage3_95CI_mean = compare_ghg.stage3_95CI.mean()\n",
+    "\n",
     "mean_ratio = compare_ghg.CI_ratio.mean()\n",
     "stage1_cross_parity = len(compare_ghg.loc[compare_ghg.stage1_cross_parity == True])\n",
     "stage2_cross_parity = len(compare_ghg.loc[compare_ghg.stage2_cross_parity == True])\n",
+    "stage3_cross_parity = len(compare_ghg.loc[compare_ghg.stage3_cross_parity == True])\n",
+    "\n",
     "print(f'Mean 95% CI error bar length for Stage 1: {stage1_95CI_mean:0.2f}')\n",
     "print(f'Mean 95% CI error bar length for Stage 2: {stage2_95CI_mean:0.2f}')\n",
+    "print(f'Mean 95% CI error bar length for Stage 3: {stage3_95CI_mean:0.2f}')\n",
+    "\n",
     "print(f'Average ratio between Stage 2 and Stage 1: {mean_ratio:0.4f}')\n",
     "print(f'Minimum CI ratio: {compare_ghg.CI_ratio.min():0.2f}')\n",
     "print(f'Minimum CI ratio: {compare_ghg.CI_ratio.max():0.2f}\\n')\n",
@@ -1433,8 +1447,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T02:04:42.751458Z",
-     "start_time": "2024-03-05T02:04:42.717900Z"
+     "end_time": "2024-03-08T17:32:31.200221Z",
+     "start_time": "2024-03-08T17:32:31.176894Z"
     }
    }
   },
@@ -1775,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -1836,6 +1850,17 @@
       "Percentage of measurements within 50% of metered rate: 87.6%\n",
       "\n",
       "\n",
+      "GHGSat analysis: Stage 3\n",
+      "\n",
+      "Sanity check:\n",
+      "Number of points within 50% accuracy but not within 25% accuracy: 0\n",
+      "\n",
+      "Number of points within 25% of metered release rate: 35\n",
+      "Percentage of measurements within 25% of metered rate: 55.6%\n",
+      "Number of points within 50% of metered release rate: 56\n",
+      "Percentage of measurements within 50% of metered rate: 88.9%\n",
+      "\n",
+      "\n",
       "MethaneAIR analysis: Stage 1\n",
       "\n",
       "Sanity check:\n",
@@ -1855,24 +1880,30 @@
       "Number of points within 25% of metered release rate: 3\n",
       "Percentage of measurements within 25% of metered rate: 37.5%\n",
       "Number of points within 50% of metered release rate: 7\n",
-      "Percentage of measurements within 50% of metered rate: 87.5%\n"
+      "Percentage of measurements within 50% of metered rate: 87.5%\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "from methods_source import load_overpass_summary\n",
     "def characterize_quantification_error(operator, stage=1, strict_discard=False):\n",
     "    operator_1 = load_overpass_summary(operator, stage=stage, strict_discard=strict_discard)\n",
     "\n",
     "    # Filter for pass all QC\n",
     "    operator_1 = operator_1.loc[operator_1['qc_summary']=='pass_all']\n",
+    "    \n",
+    "    # Only consider points not given in Stage 3 \n",
     "    if stage == 3:\n",
-    "        operator_1 = operator_1.loc[operator_1['phase_iii']==False]\n",
+    "        operator_1 = operator_1.loc[operator_1['phase_iii']==False] # 0 means we did not give them the ground truth data \n",
     "\n",
     "    # Remove zero releases:\n",
     "    operator_1 = operator_1.loc[operator_1['non_zero_release'] == True]\n",
     "\n",
     "    # Remove non-detected releases (operator quantification > 0)\n",
     "    operator_1 = operator_1.loc[operator_1['operator_quantification'] > 0]\n",
+    "    \n",
+    "\n",
     "\n",
     "    # Evan in Sherwin et al 2023 says 86% of Kairos quantification estimates fall within +/- 50% of the metered value\n",
     "\n",
@@ -1934,6 +1965,7 @@
     "\n",
     "ghg_1 = characterize_quantification_error('GHGSat', stage=1, strict_discard=False)\n",
     "ghg_2 = characterize_quantification_error('GHGSat', stage=2, strict_discard=False)\n",
+    "ghg_3 = characterize_quantification_error('GHGSat', stage=3, strict_discard=False)\n",
     "\n",
     "mair_1 = characterize_quantification_error('MethaneAIR', stage=1, strict_discard=False)\n",
     "sciav_1 = characterize_quantification_error('Scientific Aviation', stage=1, strict_discard=True)\n"
@@ -1941,8 +1973,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-05T02:04:42.799953Z",
-     "start_time": "2024-03-05T02:04:42.765567Z"
+     "end_time": "2024-03-08T17:35:45.625976Z",
+     "start_time": "2024-03-08T17:35:45.590952Z"
     }
    }
   },
